--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "start:app": "npm run develop",
     "start:lambda": "netlify-lambda serve src/lambda",
     "start": "run-p start:**",
-    "build": "gatsby build",
+    "build:app": "npm run clean && gatsby build",
+    "build:lambda": "netlify-lambda build src/lambda",
+    "build": "run-p build:**",
     "develop": "npm run clean && gatsby develop",
     "serve": "gatsby serve",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
