--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -23,6 +23,12 @@ collections:
 
   - name: "pages"
     label: "Pages"
+    folder: "src/pages"
+    fields:
+      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "page-text"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Body", name: "body", widget: "markdown"}
+    create: true
     files:
       - file: "src/pages/index.md"
         label: "Landing Page"
