--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
-  name: git-gateway
-  branch: master
+  name: github
+  repo: 213a/MeshLabs-Landing # Path to your GitHub repository
 
 media_folder: static/img
 public_folder: /img
@@ -25,7 +25,7 @@ collections:
     label: "Text pages"
     folder: "src/pages/content"
     fields:
-      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "page-text"}
+      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "text-page"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
     create: true
