--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "bulma": "^0.7.0",
     "gatsby": "^2.1.34",
     "gatsby-image": "^2.0.23",
+    "gatsby-plugin-facebook-pixel": "^1.0.3",
     "gatsby-plugin-google-analytics": "^2.0.21",
+    "gatsby-plugin-google-tagmanager": "^2.0.15",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^4.0.0",
     "gatsby-plugin-purgecss": "^3.1.0",
