--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-ga": "^2.5.7",
     "react-helmet": "^5.2.0",
     "reset-css": "^4.0.1",
     "svg-sprite-loader": "^4.1.6",
